Fix possible invalid refs

--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -25,13 +25,13 @@
 RKE::
 +
 --
-. <<_1_创建云凭证,创建云凭证>>
-. <<_2_使用云凭证和_ec2_的信息来创建节点模板,使用云凭证和 EC2 的信息来创建节点模板>>
-. <<_3_使用节点模板创建具有节点池的集群,使用节点模板创建具有节点池的集群>>
+. <<_rke_1_创建云凭证,创建云凭证>>
+. <<_rke_2_使用云凭证和_ec2_的信息来创建节点模板,使用云凭证和 EC2 的信息来创建节点模板>>
+. <<_rke_3_使用节点模板创建具有节点池的集群,使用节点模板创建具有节点池的集群>>
 
-[#_rke1_1_创建云凭证]
+[#_rke_1_创建云凭证]
 [pass]
-<h3><a id="_rke1_1_创建云凭证"></a>1. 创建云凭证</h3>
+<h3><a id="_rke_1_创建云凭证"></a>1. 创建云凭证</h3>
 
 . 点击 *☰ > 集群管理*。
 . 单击**云凭证**。
@@ -44,9 +44,9 @@ RKE::
 
 *结果*：已创建用于在集群中配置节点的云凭证。你可以在其他节点模板或集群中复用这些凭证。
 
-[#_2_使用云凭证和_ec2_的信息来创建节点模板]
+[#_rke_2_使用云凭证和_ec2_的信息来创建节点模板]
 [pass]
-<h3><a id="_2_使用云凭证和_ec2_的信息来创建节点模板"></a>2. 使用云凭证和 EC2 的信息来创建节点模板</h3>
+<h3><a id="_rke_2_使用云凭证和_ec2_的信息来创建节点模板"></a>2. 使用云凭证和 EC2 的信息来创建节点模板</h3>
 
 为 EC2 创建xref:cluster-deployment/infra-providers/infra-providers.adoc#_节点模板[节点模板]会允许 Rancher 在 EC2 中配置新节点。其他集群可以复用节点模板。
 
@@ -63,9 +63,9 @@ RKE::
 ====
 
 
-[#_3_使用节点模板创建具有节点池的集群]
+[#_rke_3_使用节点模板创建具有节点池的集群]
 [pass]
-<h3><a id="_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
+<h3><a id="_rke_3_使用节点模板创建具有节点池的集群"></a>3. 使用节点模板创建具有节点池的集群</h3>
 
 将一个或多个节点池添加到你的集群。有关节点池的更多信息，请参阅xref:cluster-deployment/infra-providers/infra-providers.adoc[本节]。
 
