--- a/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -25,10 +25,10 @@
 --
 如果 Rancher Server 用于配置仅有 Linux 节点的集群，请按以下步骤将你的镜像推送到私有镜像仓库。
 
-. <<_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
-. <<_2_收集_cert_manager_镜像,收集 cert-manager 镜像>>（除非你使用自己的证书，或在负载均衡器上终止 TLS）
-. <<_3_将镜像保存到你的工作站中,把镜像保存到你的工作站>>
-. <<_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
+. <<_linux_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_linux_2_收集_cert_manager_镜像,收集 cert-manager 镜像>>（除非你使用自己的证书，或在负载均衡器上终止 TLS）
+. <<_linux_3_将镜像保存到你的工作站中,把镜像保存到你的工作站>>
+. <<_linux_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_linux_先决条件]
 [pass]
@@ -58,9 +58,9 @@
 | 该脚本从 `rancher-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-[#_2_收集_cert_manager_镜像]
+[#_linux_2_收集_cert_manager_镜像]
 [pass]
-<h3><a id="_2_收集_cert_manager_镜像"></a>2. 收集 cert-manager 镜像</h3>
+<h3><a class="anchor" id="_linux_2_收集_cert_manager_镜像" href="#_linux_2_收集_cert_manager_镜像"></a>TITLE</h3>
 
 [NOTE]
 ====
@@ -94,9 +94,9 @@ helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | se
 sort -u rancher-images.txt -o rancher-images.txt
 ----
 
-[#_linux_将镜像保存到你的工作站中]
+[#_linux_3_将镜像保存到你的工作站中]
 [pass]
-<h3><a id="_linux_将镜像保存到你的工作站中"></a>将镜像保存到你的工作站中</h3>
+<h3><a class="anchor" id="_linux_3_将镜像保存到你的工作站中" href="#_linux_3_将镜像保存到你的工作站中"></a>3. 将镜像保存到你的工作站中</h3>
 
 . 为 `rancher-save-images.sh` 文件添加可执行权限：
 +
@@ -115,7 +115,7 @@ chmod +x rancher-save-images.sh
 
 [#_linux_4_推送镜像到私有镜像仓库]
 [pass]
-<h3><a id="_linux_4_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
+<h3><a class="anchor" id="_linux_4_推送镜像到私有镜像仓库" href="_linux_4_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
 
 下一步，你将使用脚本将 `rancher-images.tar.gz` 中的镜像移动到你的私有镜像仓库，以方便加载镜像。
 
@@ -155,10 +155,10 @@ Linux 和 Windows 集群::
 
 从 Windows Server 工作站中收集和推送 Windows 镜像。
 
-. <<_windows_1,找到你的 Rancher 版本所需的资源>>
-. <<_windows_2,将镜像保存到你的 Windows Server 工作站>>
-. <<_windows_3,准备 Docker daemon>>
-. <<_windows_4,推送镜像到私有镜像仓库>>
+. <<_win_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_win_2_将镜像保存到你的_windows_server_工作站,将镜像保存到你的 Windows Server 工作站>>
+. <<_win_3_准备_docker_daemon,准备 Docker daemon>>
+. <<_win_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_win_先决条件_]
 [pass]
@@ -170,11 +170,9 @@ Linux 和 Windows 集群::
 
 你的镜像仓库必须支持 Manifest。这是因为从 2020 年 4 月开始, Amazon Elastic Container Registry 已经不再支持 Manifest。
 
-+++<a name="windows-1">++++++</a>+++
-
 [#_win_1_找到你的_rancher_版本所需的资源]
 [pass]
-<h3><a id="_win_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h3>
+<h3><a class="anchor" id="_win_1_找到你的_rancher_版本所需的资源" href="_win_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h3>
 
 . 访问 Rancher 的link:https://github.com/rancher/rancher/releases[发布说明]页面，找到你需要安装的 Rancher v2.x.x 版本。不要下载带有 `rc` 或 `Pre-release` 标记的版本，因为这些版本在生产环境中不够稳定。
 . 从你所需版本的 *Assets* 处下载以下文件：
@@ -192,11 +190,9 @@ Linux 和 Windows 集群::
 | 该脚本从 `rancher-windows-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-+++<a name="windows-2">++++++</a>+++
-
 [#_2_将镜像保存到你的_windows_server_工作站]
 [pass]
-<h3><a id="_2_将镜像保存到你的_windows_server_工作站"></a>2. 将镜像保存到你的 Windows Server 工作站</h3>
+<h3><a class="anchor" id="_2_将镜像保存到你的_windows_server_工作站" href="_2_将镜像保存到你的_windows_server_工作站"></a>2. 将镜像保存到你的 Windows Server 工作站</h3>
 
 . 在 `powershell` 中，进入上一步下载的文件所在的目录。
 . 运行 `rancher-save-images.ps1` 以创建包含所有所需镜像的压缩包：
@@ -208,11 +204,9 @@ Linux 和 Windows 集群::
 +
 *结果*：Docker 开始拉取用于离线安装的镜像。请耐心等待。这个过程需要几分钟。完成时，你的当前目录会输出名为 `rancher-windows-images.tar.gz` 的压缩包。请确认输出文件是否存在。
 
-+++<a name="windows-3">++++++</a>+++
-
-[#_准备_docker_daemon]
+[#_win_3_准备_docker_daemon]
 [pass]
-<h3><a id="_准备_docker_daemon"></a>3. 准备 Docker daemon</h3>
+<h3><a class="anchor" id="_win_3_准备_docker_daemon" anchor="_win_3_准备_docker_daemon"></a>3. 准备 Docker daemon</h3>
 
 将你的私有镜像仓库地址尾附到 Docker daemon (`C:\\ProgramData\\Docker\\config\\daemon.json`) 的 `allow-nondistributable-artifacts` 配置字段中。Windows 镜像的基础镜像是由 `mcr.microsoft.com` 镜像仓库维护的，而 Docker Hub 中缺少 Microsoft 镜像仓库层，且需要将其拉入私有镜像仓库，因此这一步骤是必须的。
 
@@ -228,11 +222,9 @@ Linux 和 Windows 集群::
 }
 ----
 
-+++<a name="windows-4">++++++</a>+++
-
-[#_win_推送镜像到私有镜像仓库]
+[#_win_4_推送镜像到私有镜像仓库]
 [pass]
-<h3><a id="_win_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
+<h3><a class="anchor" id="_win_4_推送镜像到私有镜像仓库" anchor="_win_4_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
 
 使用脚本将 `rancher-windows-images.tar.gz` 中的镜像移动到你的私有镜像仓库，以方便加载镜像。
 
@@ -258,10 +250,10 @@ docker login <REGISTRY.YOURDOMAIN.COM:PORT>
 
 Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Windows 镜像推送到私有镜像仓库，然后再推送 Linux 镜像。由于被推送的 Linux 镜像实际上是支持 Windows 和 Linux 镜像的 manifest，因此涉及的步骤不同于只包含 Linux 节点的集群。
 
-. <<_linux_1,找到你的 Rancher 版本所需的资源>>
-. <<_linux_2,收集所有需要的镜像>>
-. <<_linux_3,将镜像保存到你的 Linux 工作站中>>
-. <<_linux_4,推送镜像到私有镜像仓库>>
+. <<_winlin_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_winlin_2_收集所有需要的镜像,收集所有需要的镜像>>
+. <<_winlin_3_将镜像保存到你的工作站中,将镜像保存到你的 Linux 工作站中>>
+. <<_winlin_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_winlin_先决条件]
 [pass]
@@ -273,11 +265,9 @@ Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Win
 
 工作站必须安装 Docker 18.02+ 版本以提供 manifest 支持。Manifest 支持是配置 Windows 集群所必须的。
 
-+++<a name="linux-1">++++++</a>+++
-
-[#_1_找到你的_rancher_版本所需的资源]
+[#_winlin_1_找到你的_rancher_版本所需的资源]
 [pass]
-<h3><a id="_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h3>
+<h3><a class="anchor" id="_winlin_1_找到你的_rancher_版本所需的资源" href="_winlin_1_找到你的_rancher_版本所需的资源"></a>1. 找到你的 Rancher 版本所需的资源</h3>
 
 . 访问 Rancher 的link:https://github.com/rancher/rancher/releases[发布说明]页面，找到你需要安装的 Rancher v2.x.x 版本。不要下载带有 `rc` 或 `Pre-release` 标记的版本，因为这些版本在生产环境中不够稳定。点击 *Assets*。
 . 从你所需版本的 *Assets* 处下载以下文件：
@@ -298,11 +288,9 @@ Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Win
 | 该脚本从 `rancher-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-+++<a name="linux-2">++++++</a>+++
-
-[#_收集所有需要的镜像]
+[#_winlin_2_收集所有需要的镜像]
 [pass]
-<h3><a id="_收集所有需要的镜像"></a>2. 收集所有需要的镜像</h3>
+<h3><a class="anchor" id="_winlin_2_收集所有需要的镜像" href="_winlin_2_收集所有需要的镜像"></a>2. 收集所有需要的镜像</h3>
 
 *在 Kubernetes 安装中，如果你使用的是 Rancher 默认的自签名 TLS 证书*，则必须将 https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] 镜像添加到 `rancher-images.txt` 文件中。如果你使用自己的证书，则可跳过此步骤。
 
@@ -330,11 +318,9 @@ helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | se
 sort -u rancher-images.txt -o rancher-images.txt
 ----
 
-+++<a name="linux-3">++++++</a>+++
-
-[#_3_将镜像保存到你的工作站中]
+[#_winlin_3_将镜像保存到你的工作站中]
 [pass]
-<h3><a id="_3_将镜像保存到你的工作站中"></a>3. 将镜像保存到你的工作站中</h3>
+<h3><a class="anchor" id="_winlin_3_将镜像保存到你的工作站中" href="_winlin_3_将镜像保存到你的工作站中"></a>3. 将镜像保存到你的工作站中</h3>
 
 . 为 `rancher-save-images.sh` 文件添加可执行权限：
 +
@@ -351,11 +337,9 @@ chmod +x rancher-save-images.sh
 
 *结果*：Docker 开始拉取用于离线安装的镜像。请耐心等待。这个过程需要几分钟。完成时，你的当前目录会输出名为 `rancher-images.tar.gz` 的压缩包。请确认输出文件是否存在。
 
-+++<a name="linux-4">++++++</a>+++
-
-[#_4_推送镜像到私有镜像仓库]
+[#_winlin_4_推送镜像到私有镜像仓库]
 [pass]
-<h3><a id="_4_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
+<h3><a class="anchor" id="_winlin_4_推送镜像到私有镜像仓库" href="_winlin_4_推送镜像到私有镜像仓库"></a>4. 推送镜像到私有镜像仓库</h3>
 
 使用 `rancher-load-images.sh script` 脚本将 `rancher-images.tar.gz` 中的镜像移动到你的私有镜像仓库，以方便加载镜像。
 
