--- a/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -166,7 +166,7 @@ To remove a node:
 
 If you remove the entire cluster instead of an individual node, or skip rermoving the node through the Rancher UI, follow these steps:
 
-. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<mounts,unmount>> any volumes.
+. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<_mounts,unmount>> any volumes.
 . Reboot the node.
 . <<_directories_and_files,Remove>> any remaining files.
 . Confirm that network interfaces and IP tables were properly cleaned after the reboot. If not, reboot one more time.
