--- a/versions/v2.8/modules/en/pages/cluster-deployment/configuration/rke2.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-deployment/configuration/rke2.adoc
@@ -114,7 +114,7 @@ For more details on the different networking providers and how to configure them
 
 ====== Dual-stack Networking
 
-https://docs.rke2.io/install/network_options#dual-stack-configuration[Dual-stack] networking is supported for all CNI providers. To configure RKE2 in dual-stack mode, set valid IPv4/IPv6 CIDRs for your <<_cluster_cidr,Cluster CIDR>> and/or <<service-cidr,Service CIDR>>.
+https://docs.rke2.io/install/network_options#dual-stack-configuration[Dual-stack] networking is supported for all CNI providers. To configure RKE2 in dual-stack mode, set valid IPv4/IPv6 CIDRs for your <<_cluster_cidr,Cluster CIDR>> and/or <<_service_cidr,Service CIDR>>.
 
 ====== Dual-stack Additional Configuration
 
@@ -193,7 +193,7 @@ IPv4 and/or IPv6 network CIDRs to use for pod IPs (default: 10.42.0.0/16).
 
 To configure https://docs.rke2.io/install/network_options#dual-stack-configuration[dual-stack] mode, enter a valid IPv4/IPv6 CIDR. For example `10.42.0.0/16,2001:cafe:42:0::/56`.
 
-<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium` or `multus,cilium` as your <<container-network-provider,container network>> interface provider.
+<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium` or `multus,cilium` as your <<_container_network_provider,container network>> interface provider.
 
 ===== Service CIDR
 
@@ -203,7 +203,7 @@ IPv4/IPv6 network CIDRs to use for service IPs (default: 10.43.0.0/16).
 
 To configure https://docs.rke2.io/install/network_options#dual-stack-configuration[dual-stack] mode, enter a valid IPv4/IPv6 CIDR. For example `10.42.0.0/16,2001:cafe:42:0::/56`.
 
-<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium ` or `multus,cilium` as your <<container-network-provider,container network>> interface provider.
+<<_dual_stack_additional_configuration,Additional configuration>> is required when using `cilium ` or `multus,cilium` as your <<_container_network_provider,container network>> interface provider.
 
 ===== Cluster DNS
 
@@ -358,7 +358,7 @@ spec:
 
 === machineSelectorConfig
 
-`machineSelectorConfig` is the same as <<_machineglobalconfig,`machineGlobalConfig`>> except that a <<kubernetes-node-labels,label>> selector can be specified with the configuration. The configuration will only be applied to nodes that match the provided label selector.
+`machineSelectorConfig` is the same as <<_machineglobalconfig,`machineGlobalConfig`>> except that a <<_kubernetes_node_labels,label>> selector can be specified with the configuration. The configuration will only be applied to nodes that match the provided label selector.
 
 Multiple `config` entries are allowed, each specifying their own `machineLabelSelector`. A user can specify `matchExpressions`, `matchLabels`, both, or neither. Omitting the `machineLabelSelector` section of this field has the same effect as putting the config in the `machineGlobalConfig` section.
 
