--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -24,14 +24,14 @@ In this guide, we are assuming you have created your nodes in your air gapped en
 [pass]
 <h2><a class="anchor" id="_k3s_installation_outline" href="#_k3s_installation_outline"></a>Installation Outline</h2>
 
-. <<_1_prepare_images_directory,Prepare Images Directory>>
-. <<_2_create_registry_yaml,Create Registry YAML>>
-. <<_3_install_k3s,Install K3s>>
-. <<_4_save_and_start_using_the_kubeconfig_file,Save and Start Using the kubeconfig File>>
+. <<_k3s_1_prepare_images_directory,Prepare Images Directory>>
+. <<_k3s_2_create_registry_yaml,Create Registry YAML>>
+. <<_k3s_3_install_k3s,Install K3s>>
+. <<_k3s_4_save_and_start_using_the_kubeconfig_file,Save and Start Using the kubeconfig File>>
 
-[#_1_prepare_images_directory]
+[#_k3s_1_prepare_images_directory]
 [pass]
-<h2><a class="anchor" id="_1_prepare_images_directory" href="#_1_prepare_images_directory"></a>1. Prepare Images Directory</h2>
+<h2><a class="anchor" id="_k3s_1_prepare_images_directory" href="#_k3s_1_prepare_images_directory"></a>1. Prepare Images Directory</h2>
 
 Obtain the images tar file for your architecture from the https://github.com/k3s-io/k3s/releases[releases] page for the version of K3s you will be running.
 
@@ -73,9 +73,9 @@ Note, at this time only secure registries are supported with K3s (SSL with custo
 
 For more information on private registries configuration file for K3s, refer to the https://rancher.com/docs/k3s/latest/en/installation/private-registry/[K3s documentation.]
 
-[#_3_install_k3s]
+[#_k3s_3_install_k3s]
 [pass]
-<h2><a class="anchor" id="_3_install_k3s" href="#_3_install_k3s"></a>3. Install K3s</h2>
+<h2><a class="anchor" id="_k3s_3_install_k3s" href="#_k3s_3_install_k3s"></a>3. Install K3s</h2>
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/[Rancher Support Matrix].
 
@@ -171,14 +171,14 @@ In this guide, we are assuming you have created your nodes in your air-gapped en
 [pass]
 <h2><a class="anchor" id="_SOM_rke2_installation_outlineEID" href="#_rke2_installation_outline"></a>Installation Outline</h2>
 
-. <<_1_create_rke2_configuration,Create RKE2 configuration>>
-. <<_2_create_registry_yaml,Create Registry YAML>>
-. <<_3_install_rke2,Install RKE2>>
-. <<_4_save_and_start_using_the_kubeconfig_file,Save and Start Using the kubeconfig File>>
+. <<_rke2_1_create_rke2_configuration,Create RKE2 configuration>>
+. <<_rke2_2_create_registry_yaml,Create Registry YAML>>
+. <<_rke2_3_install_rke2,Install RKE2>>
+. <<_rke2_4_save_and_start_using_the_kubeconfig_file,Save and Start Using the kubeconfig File>>
 
-[#_1_create_rke2_configuration]
+[#_rke2_1_create_rke2_configuration]
 [pass]
-<h2><a class="anchor" id="_1_create_rke2_configuration" href="#_1_create_rke2_configuration"></a>1. Create RKE2 configuration</h2>
+<h2><a class="anchor" id="_rke2_1_create_rke2_configuration" href="#_rke2_1_create_rke2_configuration"></a>1. Create RKE2 configuration</h2>
 
 Create the config.yaml file at `/etc/rancher/rke2/config.yaml`. This will contain all the configuration options necessary to create a highly available RKE2 cluster.
 
@@ -235,9 +235,9 @@ configs:
 
 For more information on private registries configuration file for RKE2, refer to the https://docs.rke2.io/install/containerd_registry_configuration[RKE2 documentation.]
 
-[#_3_install_rke2]
+[#_rke2_3_install_rke2]
 [pass]
-<h2><a class="anchor" id="_3_install_rke2" href="#_3_install_rke2"></a>3. Install RKE2</h2>
+<h2><a class="anchor" id="_rke2_3_install_rke2" href="#_rke2_3_install_rke2"></a>3. Install RKE2</h2>
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://rancher.com/support-maintenance-terms/[support maintenance terms.]
 
