--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -25,10 +25,10 @@ Linux Only Clusters::
 --
 For Rancher servers that will only provision Linux clusters, these are the steps to populate your private registry.
 
-. <<_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
-. <<_2_collect_the_cert_manager_image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
-. <<_3_save_the_images_to_your_workstation,Save the images to your workstation>>
-. <<_4_populate_the_private_registry,Populate the private registry>>
+. <<_linux_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
+. <<_linux_2_collect_the_cert_manager_image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
+. <<_linux_3_save_the_images_to_your_workstation,Save the images to your workstation>>
+. <<_linux_4_populate_the_private_registry,Populate the private registry>>
 
 [#_prerequisites]
 [pass]
@@ -58,9 +58,9 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 | This script loads images from the `rancher-images.tar.gz` file and pushes them to your private registry.
 |===
 
-[#_2_collect_the_cert_manager_image]
+[#_linux_2_collect_the_cert_manager_image]
 [pass]
-<h2><a class="anchor" id="_2_collect_the_cert_manager_image" href="#_2_collect_the_cert_manager_image"></a>2. Collect the cert-manager image</h2>
+<h2><a class="anchor" id="_linux_2_collect_the_cert_manager_image" href="#_linux_2_collect_the_cert_manager_image"></a>2. Collect the cert-manager image</h2>
 
 [NOTE]
 ====
@@ -156,10 +156,10 @@ For Rancher servers that will provision Linux and Windows clusters, there are di
 
 The Windows images need to be collected and pushed from a Windows server workstation.
 
-. <<_windows_1,Find the required assets for your Rancher version>>
-. <<_windows_2,Save the images to your Windows Server workstation>>
-. <<_windows_3,Prepare the Docker daemon>>
-. <<_windows_4,Populate the private registry>>
+. <<_win_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
+. <<_2_save_the_images_to_your_windows_server_workstation,Save the images to your Windows Server workstation>>
+. <<_3_prepare_the_docker_daemon,Prepare the Docker daemon>>
+. <<_win_4_populate_the_private_registry,Populate the private registry>>
 
 [#_win_prerequisites]
 [pass]
@@ -170,8 +170,6 @@ These steps expect you to use a Windows Server 1809 workstation that has interne
 The workstation must have Docker 18.02+ in order to support manifests, which are required when provisioning Windows clusters.
 
 Your registry must support manifests. As of April 2020, Amazon Elastic Container Registry does not support manifests.
-
-+++<a name="windows-1">++++++</a>+++
 
 [#_win_1_find_the_required_assets_for_your_rancher_version]
 [pass]
@@ -193,8 +191,6 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 | This script loads the images from the `rancher-windows-images.tar.gz` file and pushes them to your private registry.
 |===
 
-+++<a name="windows-2">++++++</a>+++
-
 [#_2_save_the_images_to_your_windows_server_workstation]
 [pass]
 <h3><a class="anchor" id="_2_save_the_images_to_your_windows_server_workstation" href="#_2_save_the_images_to_your_windows_server_workstation"></a>2. Save the images to your Windows Server workstation</h3>
@@ -208,8 +204,6 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 ----
 +
 *Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-windows-images.tar.gz`. Check that the output is in the directory.
-
-+++<a name="windows-3">++++++</a>+++
 
 [#_3_prepare_the_docker_daemon]
 [pass]
@@ -228,8 +222,6 @@ Append your private registry address to the `allow-nondistributable-artifacts` c
      ...
    }
 ----
-
-+++<a name="windows-4">++++++</a>+++
 
 [#_win_4_populate_the_private_registry]
 [pass]
@@ -259,10 +251,10 @@ docker login <REGISTRY.YOURDOMAIN.COM:PORT>
 
 The Linux images need to be collected and pushed from a Linux host, but _must be done after_ populating the Windows images into the private registry. These step are different from the Linux only steps as the Linux images that are pushed will actually manifests that support Windows and Linux images.
 
-. <<_linux_1,Find the required assets for your Rancher version>>
-. <<_linux_2,Collect all the required images>>
-. <<_linux_3,Save the images to your Linux workstation>>
-. <<_linux_4,Populate the private registry>>
+. <<_winlin_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
+. <<_winlin_2_collect_all_the_required_images,Collect all the required images>>
+. <<_winlin_3_save_the_images_to_your_workstation,Save the images to your Linux workstation>>
+. <<_winlin_4_populate_the_private_registry,Populate the private registry>>
 
 [#_winlin_prerequisites]
 [pass]
@@ -273,8 +265,6 @@ You must populate the private registry with the Windows images before populating
 These steps expect you to use a Linux workstation that has internet access, access to your private registry, and at least 20 GB of disk space.
 
 The workstation must have Docker 18.02+ in order to support manifests, which are required when provisioning Windows clusters.
-
-+++<a name="linux-1">++++++</a>+++
 
 [#_winlin_1_find_the_required_assets_for_your_rancher_version]
 [pass]
@@ -298,8 +288,6 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 | `rancher-load-images.sh`
 | This script loads images from the `rancher-images.tar.gz` file and pushes them to your private registry.
 |===
-
-+++<a name="linux-2">++++++</a>+++
 
 [#_winlin_2_collect_all_the_required_images]
 [pass]
@@ -331,8 +319,6 @@ helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | se
 sort -u rancher-images.txt -o rancher-images.txt
 ----
 
-+++<a name="linux-3">++++++</a>+++
-
 [#_winlin_3_save_the_images_to_your_workstation]
 [pass]
 <h3><a class="anchor" id="_winlin_3_save_the_images_to_your_workstation" href="#_winlin_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>
@@ -351,8 +337,6 @@ chmod +x rancher-save-images.sh
 ----
 
 *Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-images.tar.gz`. Check that the output is in the directory.
-
-+++<a name="linux-4">++++++</a>+++
 
 [#_winlin_4_populate_the_private_registry]
 [pass]
