--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
@@ -103,8 +103,4 @@ Congratulations! You have successfully deployed a workload exposed via a NodePor
 
 == What's Next?
 
-When you're done using your sandbox, destroy the Rancher Server and your cluster. See one of the following:
-
-* xref:#_destroying_the_environment[Amazon AWS: Destroying the Environment]
-* xref:#_destroying_the_environment[DigitalOcean: Destroying the Environment]
-* xref:#_destroying_the_environment[Vagrant: Destroying the Environment]
+When you're done using your sandbox, destroy the Rancher Server and your cluster. 
