--- a/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
@@ -2,7 +2,7 @@
 
 == Microsoft Graph API
 
-Microsoft Graph API is now the flow through which you will set up Azure AD. The below sections will assist <<_new_user_setup,new users>> in configuring Azure AD with a new instance as well as assist existing Azure app owners in <<migrating-from-azure-ad-graph-api-to-microsoft-graph-api,migrating to the new flow>>.
+Microsoft Graph API is now the flow through which you will set up Azure AD. The below sections will assist <<_new_user_setup,new users>> in configuring Azure AD with a new instance as well as assist existing Azure app owners in <<_migrating_from_azure_ad_graph_api_to_microsoft_graph_api,migrating to the new flow>>.
 
 The Microsoft Graph API flow in Rancher is constantly evolving. We recommend that you use the latest patched version of 2.7, as it is still in active development and will continue to receive new features and improvements.
 
@@ -13,7 +13,6 @@ If you have an instance of Active Directory (AD) hosted in Azure, you can config
 [NOTE]
 .Notes
 ====
-
 * Azure AD integration only supports Service Provider initiated logins.
 * Most of this procedure takes place from the https://portal.azure.com/[Microsoft Azure Portal].
 ====
@@ -25,7 +24,6 @@ Configuring Rancher to allow your users to authenticate with their Azure AD acco
 
 [TIP]
 ====
-
 Before you start, open two browser tabs: one for Rancher, and one for the Azure portal. This will help with copying and pasting configuration values from the portal to Rancher.
 ====
 
@@ -63,7 +61,6 @@ You can find your personalized Azure Redirect URI (reply URL) in Rancher on the 
 
 [NOTE]
 ====
-
 It can take up to five minutes for this change to take affect, so don't be alarmed if you can't authenticate immediately after Azure AD configuration.
 ====
 
@@ -151,7 +148,7 @@ image:app-configuration.png[Application ID]
  .. If you aren't already there, use search to open *App registrations*.
  .. In *Overview*, find the entry you created for Rancher.
  .. Copy the *Application (Client) ID* and paste it into Rancher as your *Application ID*.
-. In most cases, your endpoint options will either be <<_global,Standard>> or <<china,China>>. For either of these options, you only need to enter the *Tenant ID*, *Application ID*, and *Application Secret*.
+. In most cases, your endpoint options will either be <<_global,Standard>> or <<_china,China>>. For either of these options, you only need to enter the *Tenant ID*, *Application ID*, and *Application Secret*.
 
 image:tenant-application-id-secret.png[Standard Endpoint Options]
 
@@ -251,7 +248,6 @@ If Rancher is still configured to use the Azure AD Graph API when it is retired,
 
 [CAUTION]
 ====
-
 Admins should create a xref:rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[Rancher backup] before they commit to the endpoint migration described below.
 ====
 
@@ -287,7 +283,6 @@ If you need to roll back your migration, please note the following:
 
 [CAUTION]
 ====
-
 If you upgrade to Rancher v2.7.0+ with an existing Azure AD setup, and choose to disable the auth provider, you won't be able to restore the previous setup. You also won't be able to set up Azure AD using the old flow. You'll need to re-register with the new auth flow. Since Rancher now uses the Graph API, users need set up the <<_3_set_required_permissions_for_rancher,proper permissions in the Azure portal>>.
 ====
 
@@ -367,7 +362,7 @@ If you upgrade to Rancher v2.7.0+ with an existing Azure AD setup, and choose to
 
 
 * The https://docs.microsoft.com/en-us/graph/migrate-azure-ad-graph-overview[Azure AD Graph API] is deprecated and will be retired by Microsoft at any time after June 30, 2023, without advance notice. We will update our docs to advise the community when it is retired. Rancher now uses the https://docs.microsoft.com/en-us/graph/use-the-api[Microsoft Graph API] as the new flow to set up Azure AD as the external auth provider.
-* If you're a new user, or wish to migrate, refer to the new flow instructions for <<_microsoft_graph_api/,Rancher v2.7.0+>>.
+* If you're a new user, or wish to migrate, refer to the new flow instructions for <<_microsoft_graph_api,Rancher v2.7.0+>>.
 * If you don't wish to upgrade to v2.7.0+ after the Azure AD Graph API is retired, you'll need to either:
  ** Use the built-in Rancher auth or
  ** Use another third-party auth system and set that up in Rancher. Please see the xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[authentication docs] to learn how to configure other open authentication providers.
