--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -156,10 +156,10 @@ Linux 和 Windows 集群::
 
 从 Windows Server 工作站中收集和推送 Windows 镜像。
 
-. <<_windows_1,找到你的 Rancher 版本所需的资源>>
-. <<_windows_2,将镜像保存到你的 Windows Server 工作站>>
-. <<_windows_3,准备 Docker daemon>>
-. <<_windows_4,推送镜像到私有镜像仓库>>
+. <<_win_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_2_将镜像保存到你的_windows_server_工作站,将镜像保存到你的 Windows Server 工作站>>
+. <<_3_准备_docker_daemon,准备 Docker daemon>>
+. <<_win_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_win_先决条件]
 [pass]
@@ -170,8 +170,6 @@ Linux 和 Windows 集群::
 工作站必须安装 Docker 18.02+ 版本以提供 manifest 支持。Manifest 支持是配置 Windows 集群所必须的。
 
 你的镜像仓库必须支持 Manifest。这是因为从 2020 年 4 月开始, Amazon Elastic Container Registry 已经不再支持 Manifest。
-
-+++<a name="windows-1">++++++</a>+++
 
 [#_win_1_找到你的_rancher_版本所需的资源]
 [pass]
@@ -193,8 +191,6 @@ Linux 和 Windows 集群::
 | 该脚本从 `rancher-windows-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-+++<a name="windows-2">++++++</a>+++
-
 [#_2_将镜像保存到你的_windows_server_工作站]
 [pass]
 <h3><a class="anchor" id="_2_将镜像保存到你的_windows_server_工作站" href="#_2_将镜像保存到你的_windows_server_工作站"></a>2. 将镜像保存到你的 Windows Server 工作站</h3>
@@ -208,8 +204,6 @@ Linux 和 Windows 集群::
 ----
 +
 *结果*：Docker 开始拉取用于离线安装的镜像。请耐心等待。这个过程需要几分钟。完成时，你的当前目录会输出名为 `rancher-windows-images.tar.gz` 的压缩包。请确认输出文件是否存在。
-
-+++<a name="windows-3">++++++</a>+++
 
 [#_3_准备_docker_daemon]
 [pass]
@@ -228,8 +222,6 @@ Linux 和 Windows 集群::
   ...
 }
 ----
-
-+++<a name="windows-4">++++++</a>+++
 
 [#_win_4_推送镜像到私有镜像仓库]
 [pass]
@@ -259,10 +251,10 @@ docker login <REGISTRY.YOURDOMAIN.COM:PORT>
 
 Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Windows 镜像推送到私有镜像仓库，然后再推送 Linux 镜像。由于被推送的 Linux 镜像实际上是支持 Windows 和 Linux 镜像的 manifest，因此涉及的步骤不同于只包含 Linux 节点的集群。
 
-. <<_linux_1,找到你的 Rancher 版本所需的资源>>
-. <<_linux_2,收集所有需要的镜像>>
-. <<_linux_3,将镜像保存到你的 Linux 工作站中>>
-. <<_linux_4,推送镜像到私有镜像仓库>>
+. <<_winlin_1_找到你的_rancher_版本所需的资源,找到你的 Rancher 版本所需的资源>>
+. <<_winlin_2_收集所有需要的镜像,收集所有需要的镜像>>
+. <<_winlin_3_将镜像保存到你的工作站中,将镜像保存到你的 Linux 工作站中>>
+. <<_winlin_4_推送镜像到私有镜像仓库,推送镜像到私有镜像仓库>>
 
 [#_winlin_先决条件]
 [pass]
@@ -273,8 +265,6 @@ Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Win
 这些步骤要求你使用一个 Linux 工作站，该工作站需要可访问互联网和你的私有镜像仓库，且至少有 20GB 的可用磁盘空间。
 
 工作站必须安装 Docker 18.02+ 版本以提供 manifest 支持。Manifest 支持是配置 Windows 集群所必须的。
-
-+++<a name="linux-1">++++++</a>+++
 
 [#_winlin_1_找到你的_rancher_版本所需的资源]
 [pass]
@@ -299,11 +289,9 @@ Linux 镜像需要在 Linux 主机上收集和推送，但是你必须先将 Win
 | 该脚本从 `rancher-images.tar.gz` 文件中加载镜像，并把镜像推送到你的私有镜像仓库。
 |===
 
-+++<a name="linux-2">++++++</a>+++
-
-[#_2_收集所有需要的镜像]
+[#_winlin_2_收集所有需要的镜像]
 [pass]
-<h3><a class="anchor" id="_2_收集所有需要的镜像" href="#_2_收集所有需要的镜像"></a>2. 收集所有需要的镜像</h3>
+<h3><a class="anchor" id="_winlin_2_收集所有需要的镜像" href="#_winlin_2_收集所有需要的镜像"></a>2. 收集所有需要的镜像</h3>
 
 *在 Kubernetes 安装中，如果你使用的是 Rancher 默认的自签名 TLS 证书*，则必须将 https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] 镜像添加到 `rancher-images.txt` 文件中。如果你使用自己的证书，则可跳过此步骤。
 
@@ -331,11 +319,9 @@ helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | se
 sort -u rancher-images.txt -o rancher-images.txt
 ----
 
-+++<a name="linux-3">++++++</a>+++
-
-[#_winline_3_将镜像保存到你的工作站中]
+[#_winlin_3_将镜像保存到你的工作站中]
 [pass]
-<h3><a class="anchor" id="_winline_3_将镜像保存到你的工作站中" href="#_winline_3_将镜像保存到你的工作站中"></a>3. 将镜像保存到你的工作站中</h3>
+<h3><a class="anchor" id="_winlin_3_将镜像保存到你的工作站中" href="#_winlin_3_将镜像保存到你的工作站中"></a>3. 将镜像保存到你的工作站中</h3>
 
 . 为 `rancher-save-images.sh` 文件添加可执行权限：
 +
@@ -351,8 +337,6 @@ chmod +x rancher-save-images.sh
 ----
 
 *结果*：Docker 开始拉取用于离线安装的镜像。请耐心等待。这个过程需要几分钟。完成时，你的当前目录会输出名为 `rancher-images.tar.gz` 的压缩包。请确认输出文件是否存在。
-
-+++<a name="linux-4">++++++</a>+++
 
 [#_winlin_4_推送镜像到私有镜像仓库]
 [pass]
