--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -27,7 +27,7 @@ For Rancher servers that will only provision Linux clusters, these are the steps
 . <<_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
 . <<_2_collect_the_cert_manager_image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
 . <<_3_save_the_images_to_your_workstation,Save the images to your workstation>>
-. <<_4_populate_the_private_registry,Populate the private registry>>
+. <<_linux_4_populate_the_private_registry,Populate the private registry>>
 
 [pass]
 <h3><a id="_prerequisites"></a>Prerequisites</h3>
@@ -110,9 +110,9 @@ chmod +x rancher-save-images.sh
 +
 *Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-images.tar.gz`. Check that the output is in the directory.
 
-[#_4_populate_the_private_registry]
+[#_linux_4_populate_the_private_registry]
 [pass]
-<h3><a id="_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
+<h3><a id="_linux_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
 
 Next, you will move the images in the `rancher-images.tar.gz` to your private registry using the scripts to load the images.
 
@@ -151,11 +151,12 @@ For Rancher servers that will provision Linux and Windows clusters, there are di
 
 The Windows images need to be collected and pushed from a Windows server workstation.
 
-. <<windows-1,Find the required assets for your Rancher version>>
-. <<windows-2,Save the images to your Windows Server workstation>>
-. <<windows-3,Prepare the Docker daemon>>
-. <<windows-4,Populate the private registry>>
+. <<_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
+. <<_2_save_the_images_to_your_windows_server_workstation,Save the images to your Windows Server workstation>>
+. <<_3_prepare_the_docker_daemon,Prepare the Docker daemon>>
+. <<_win_4_populate_the_private_registry,Populate the private registry>>
 
+[#_prerequisites]
 [pass]
 <h3><a id="_prerequisites"></a>Prerequisites</h3>
 
@@ -164,8 +165,6 @@ These steps expect you to use a Windows Server 1809 workstation that has interne
 The workstation must have Docker 18.02+ in order to support manifests, which are required when provisioning Windows clusters.
 
 Your registry must support manifests. As of April 2020, Amazon Elastic Container Registry does not support manifests.
-
-+++<a name="windows-1">++++++</a>+++
 
 [#_1_find_the_required_assets_for_your_rancher_version]
 [pass]
@@ -187,8 +186,7 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 | This script loads the images from the `rancher-windows-images.tar.gz` file and pushes them to your private registry.
 |===
 
-+++<a name="windows-2">++++++</a>+++
-
+[#_2_save_the_images_to_your_windows_server_workstation]
 [pass]
 <h3><a id="_2_save_the_images_to_your_windows_server_workstation"></a>2. Save the images to your Windows Server workstation</h3>
 
@@ -202,8 +200,7 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 +
 *Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-windows-images.tar.gz`. Check that the output is in the directory.
 
-+++<a name="windows-3">++++++</a>+++
-
+[#_3_prepare_the_docker_daemon]
 [pass]
 <h3><a id="_3_prepare_the_docker_daemon"></a>3. Prepare the Docker daemon</h3>
 
@@ -221,10 +218,9 @@ Append your private registry address to the `allow-nondistributable-artifacts` c
    }
 ----
 
-+++<a name="windows-4">++++++</a>+++
-
+[#_win_4_populate_the_private_registry]
 [pass]
-<h3><a id="_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
+<h3><a id="_win_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
 
 Move the images in the `rancher-windows-images.tar.gz` to your private registry using the scripts to load the images.
 
