--- a/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -292,11 +292,11 @@ When defining a custom role, you can grant access to specific resources or speci
 
 == Default Cluster and Project Roles
 
-By default, when a standard user creates a new cluster or project, they are automatically assigned an ownership role: either <<_cluster_roles,cluster owner>> or <<project-roles,project owner>>. However, in some organizations, these roles may overextend administrative access. In this use case, you can change the default role to something more restrictive, such as a set of individual roles or a custom role.
+By default, when a standard user creates a new cluster or project, they are automatically assigned an ownership role: either <<_cluster_roles,cluster owner>> or <<_project_roles,project owner>>. However, in some organizations, these roles may overextend administrative access. In this use case, you can change the default role to something more restrictive, such as a set of individual roles or a custom role.
 
 There are two methods for changing default cluster/project roles:
 
-* *Assign Custom Roles*: Create a xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc[custom role] for either your <<_custom_cluster_roles,cluster>> or <<custom-project-roles,project>>, and then set the custom role as default.
+* *Assign Custom Roles*: Create a xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc[custom role] for either your <<_custom_cluster_roles,cluster>> or <<_custom_project_roles,project>>, and then set the custom role as default.
 * *Assign Individual Roles*: Configure multiple <<_cluster_role_reference,cluster>>/<<_project_role_reference,project>> roles as default for assignment to the creating user.
 +
 For example, instead of assigning a role that inherits other roles (such as `cluster owner`), you can choose a mix of individual roles (such as `manage nodes` and `manage storage`).
@@ -326,7 +326,7 @@ If you want to remove a default role, edit the permission and select *No* from t
 
 == Cluster Membership Revocation Behavior
 
-When you revoke the cluster membership for a standard user that's explicitly assigned membership to both the cluster _and_ a project within the cluster, that standard user <<_cluster_roles,loses their cluster roles>> but <<project-roles,retains their project roles>>. In other words, although you have revoked the user's permissions to access the cluster and its nodes, the standard user can still:
+When you revoke the cluster membership for a standard user that's explicitly assigned membership to both the cluster _and_ a project within the cluster, that standard user <<_cluster_roles,loses their cluster roles>> but <<_project_roles,retains their project roles>>. In other words, although you have revoked the user's permissions to access the cluster and its nodes, the standard user can still:
 
 * Access the projects they hold membership in.
 * Exercise any <<_project_role_reference,individual project roles>> they are assigned.
