--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -18,7 +18,7 @@ Rancher 使用 cert-manager 为 Rancher 高可用部署自动生成和续期 TLS
 .重要提示：
 ====
 
-如果你要将 cert-manager 从早于 1.5 的版本升级到最新版本，请按照以下<<_选项_c升级_15_及以下版本的_cert_manager,选项 C>> 中的步骤进行操作。请注意，你无需重新安装 Rancher 即可执行此升级。
+如果你要将 cert-manager 从早于 1.5 的版本升级到最新版本，请按照以下<<_选项_c升级_1_5_及以下版本的_cert_manager,选项 C>> 中的步骤进行操作。请注意，你无需重新安装 Rancher 即可执行此升级。
 ====
 
 
