--- a/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
+++ b/versions/v2.8/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
@@ -142,7 +142,7 @@ image:app-configuration.png[Application ID]
  .. 如果你还未在该位置，请使用搜索打开 *App registrations*。
  .. 在 **Overview**中，找到你为 Rancher 创建的条目。
  .. 复制 *Application (Client) ID* 并将其作为 *Application ID* 粘贴到 Rancher 中。
-. 你的端点选项通常是 <<_global,Standard>> 或 <<中国,China>>。对于这两个选项，你只需要输入 *Tenant ID*、*Application ID* 和 *Application Secret*。
+. 你的端点选项通常是 <<_global,Standard>> 或 <<_中国,China>>。对于这两个选项，你只需要输入 *Tenant ID*、*Application ID* 和 *Application Secret*。
 
 image:tenant-application-id-secret.png[标准端点选项]
 
@@ -353,7 +353,7 @@ ____
 *重要提示*：
 
 * https://docs.microsoft.com/en-us/graph/migrate-azure-ad-graph-overview[Azure AD Graph API] 已被弃用，Microsoft 将在 2023 年 6 月 30 日后随时停用它且不会另行通知。我们将更新我们的文档，以便在停用时向社区提供建议。Rancher 现在使用 https://docs.microsoft.com/en-us/graph/use-the-api[Microsoft Graph API] 来将 Azure AD 设置为外部身份验证提供程序。
-* 如果你是新用户或希望进行迁移，请参阅新的流程说明： <<_microsoft_graph_api/,Rancher v2.7.0+>>。
+* 如果你是新用户或希望进行迁移，请参阅新的流程说明： <<_microsoft_graph_api,Rancher v2.7.0+>>。
 * 如果你不想在 Azure AD Graph API 停用后升级到 v2.7.0+，你需要：
  ** 使用内置的 Rancher 身份认证，或者
  ** 使用另一个第三方身份认证系统并在 Rancher 中进行设置。请参阅xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[身份验证文档]，了解如何配置其他开放式身份验证提供程序。
