--- a/versions/v2.8/modules/en/pages/release-notes.adoc
+++ b/versions/v2.8/modules/en/pages/release-notes.adoc
@@ -1,3 +1,67 @@
 = Release Notes
 
-PLACEHOLDER: TODO COPY CONTENTS
+== Current Version
+
+|===
+| Version | Release Notes | Support Matrix | Prime | Community
+
+| v2.8.8
+| https://github.com/rancher/rancher/releases/tag/v2.8.8[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-8/[View]
+| &#10003;
+| N/A
+|===
+
+== Past Versions
+
+|===
+| Version | Release Notes | Support Matrix | Prime | Community
+
+| v2.8.7
+| https://github.com/rancher/rancher/releases/tag/v2.8.7[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-7/[View]
+| &#10003;
+| N/A
+
+| v2.8.6
+| https://github.com/rancher/rancher/releases/tag/v2.8.6[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-6/[View]
+| &#10003;
+| N/A
+
+| v2.8.5
+| https://github.com/rancher/rancher/releases/tag/v2.8.5[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-5/[View]
+| &#10003;
+| &#10003;
+
+| v2.8.4
+| https://github.com/rancher/rancher/releases/tag/v2.8.4[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-4/[View]
+| &#10003;
+| &#10003;
+
+| v2.8.3
+| https://github.com/rancher/rancher/releases/tag/v2.8.3[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-3/[View]
+| &#10003;
+| &#10003;
+
+| v2.8.2
+| https://github.com/rancher/rancher/releases/tag/v2.8.2[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-2/[View]
+| &#10003;
+| &#10003;
+
+| v2.8.1
+| https://github.com/rancher/rancher/releases/tag/v2.8.1[View]
+| https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-1/[View]
+| &#10003;
+| &#10003;
+
+| v2.8.0
+| https://github.com/rancher/rancher/releases/tag/v2.8.0[View]
+| N/A
+| N/A
+| &#10003;
+|===
