Add translated  zh headers

--- a/versions/v2.8/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.8/modules/zh/pages/release-notes.adoc
@@ -3,7 +3,7 @@
 == 当前版本
 
 |===
-| Version | 发版说明 | Support Matrix | Prime | Community
+| 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.8.8
 | https://github.com/rancher/rancher/releases/tag/v2.8.8[View]
@@ -12,10 +12,10 @@
 | N/A
 |===
 
-== Past Versions
+== 旧版
 
 |===
-| Version | 发版说明 | Support Matrix | Prime | Community
+| 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.8.7
 | https://github.com/rancher/rancher/releases/tag/v2.8.7[View]
