--- a/versions/latest/modules/zh/pages/release-notes.adoc
+++ b/versions/latest/modules/zh/pages/release-notes.adoc
@@ -3,7 +3,7 @@
 == 当前版本
 
 |===
-| Version | 发版说明 | Support Matrix | Prime | Community
+| 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.9.2
 | https://github.com/rancher/rancher/releases/tag/v2.9.2[View]
@@ -13,10 +13,10 @@
 |===
 
 
-== Past Versions
+== 旧版本
 
 |===
-| Version | 发版说明 | Support Matrix | Prime | Community
+| 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.9.1
 | https://github.com/rancher/rancher/releases/tag/v2.9.1[View]
