Add API swagger reference content

--- a/versions/latest/modules/en/pages/api/reference.adoc
+++ b/versions/latest/modules/en/pages/api/reference.adoc
@@ -1,15 +1,19 @@
----
-title: API Reference
-hide_table_of_contents: true
----
+= API Reference
+:page-role: -toc
 
-
-:::note
-
+[NOTE]
+====
 At this time, not all Rancher resources are available through the Rancher Kubernetes API.
+====
 
-:::
-
-import ApiDocMdx from '@theme/ApiDocMdx';
-
-<ApiDocMdx id="rancher-api" />
+++++
+<div class="api-doc">
+    <redoc id='redoc-container'></redoc>
+    <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
+    <script>
+        Redoc.init('../../../../../../shared/latest/_attachments/swagger.json',
+        {scrollYOffset: '.toolbar'},
+        document.getElementById('redoc-container'))
+    </script>
+</div>
+++++
