Use Harvester branding name

--- a/versions/latest/modules/en/pages/integrations/harvester/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/harvester/overview.adoc
@@ -13,7 +13,7 @@ To navigate to the Harvester cluster, click *☰ > Virtualization Management*. F
 * With the Harvester integration, Harvester clusters can now be imported into Rancher as a cluster type `Harvester`.
 * Users may import a Harvester cluster only on the Virtualization Management page. Importing a cluster on the Cluster Management page is not supported, and a warning will advise you to return to the VM page to do so.
 
-== Harvester Node Driver
+== {harvester-product-name} Node Driver
 
 The https://docs.harvesterhci.io/v1.1/rancher/node/node-driver/[Harvester node driver] is generally available for RKE and RKE2 options in Rancher. The node driver is available whether or not the Harvester feature flag is enabled. Note that the node driver is off by default. Users may create RKE or RKE2 clusters on Harvester only from the Cluster Management page.
 
