--- a/versions/latest/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/usage-guide.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/usage-guide.adoc
@@ -121,7 +121,7 @@ Trying to delete and restore a downstream cluster can lead to a variety of issue
 ====
 
 
-=== Fleet, Harvester, and Other Services
+=== Fleet, {harvester-product-name}, and Other Services
 
 Other services, which are backed up by Rancher Backups, often change and evolve. As this happens, their resources and backup needs may change as well. Some resources may not need to be backed up and some may not be backed up at all. It is important for teams to consider this in their development process and assess whether their related resourceSets are correctly capturing the proper set of resources for their services to be restored correctly.
 
