--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -303,7 +303,7 @@ image:port-communications.svg[基本端口要求]
 ====
 
 
-=== Harvester 集群的端口
+=== {harvester-product-name} 集群的端口
 
 有关 Harvester 端口要求的更多信息，请参阅xref:integrations/harvester/overview.adoc#_端口要求[此处]。
 
