--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -304,7 +304,7 @@ If security isn't a large concern and you're okay with opening a few additional 
 ====
 
 
-=== Ports for Harvester Clusters
+=== Ports for {harvester-product-name} Clusters
 
 Refer to the xref:integrations/harvester/overview.adoc#_port_requirements[Harvester Integration Overview] for more information on Harvester port requirements.
 
